--- a/dslab13/.classpath
+++ b/dslab13/.classpath
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" output="build" path="src/main/java"/> 
+	<classpathentry kind="src" output="build" path="src/main/java"/>
 	<classpathentry kind="src" output="build" path="src/main/resources"/>
 	<classpathentry kind="src" output="build" path="src/test/resources"/>
 	<classpathentry kind="src" output="build" path="src/test/java"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER" />
-	<classpathentry kind="output" path="build"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Asus/workspace/VSlab2/VSLab1/dslab13/lib/bouncycastle.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Asus/workspace/VSlab2/VSLab1/dslab13/lib/bcprov-jdk16-1.43.jar"/>
+	<classpathentry kind="output" path="build"/>
 </classpath>
