stage 2 bugfix und co

--- a/dslab13/.classpath
+++ b/dslab13/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="lib/junit-4.11.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Asus/workspace/VSlab2/VSLab1/dslab13/lib/bouncycastle.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Asus/workspace/VSlab2/VSLab1/dslab13/lib/bcprov-jdk16-1.43.jar"/>
+	<classpathentry kind="lib" path="lib/bcprov-jdk16-140.jar"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
